# sandbox-api

./: .env.example  .gitignore  Dockerfile  Dockerfile.agent  README.md  docker-compose.yml  pyproject.toml
.cursor/rules/: commit-after-feature.mdc
app/: __init__.py  command_validation.py  config.py  main.py  mcp_server.py  rate_limit.py  schemas.py  session_manager.py  workspace_path.py  workspace_service.py
app/auth/: __init__.py  deps.py
app/orchestrator/: __init__.py  container_manager.py
app/routers/: execute.py  sessions.py  workspace.py
app/workers/: cleanup.py
